Cambios varios en la pagina

--- a/EjerciciosHtmlCss/index.html
+++ b/EjerciciosHtmlCss/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veterinaria|Gattti</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="./public/huella.png">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
         <nav class="header__nav">
             <h2 class="header__nav__nombre-veterinaria">Veterinaria</h2>
@@ -20,11 +23,36 @@
         </nav>
     </header>
     <main>
-        <div class="main__div__letrero--urgencias">
-            <h2>Servicio de urgencias 24 horas</h2>
+        <div>
+            <img class="main__div--img-adorno adorno1" src="./public/pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
+            <img class="main__div--img-adorno adorno2" src="./public/pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
+            <img class="main__div--img-adorno adorno3" src="./public/pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
+            <img class="main__div--img-adorno adorno4" src="./public/pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
+            <img class="main__div--img-adorno adorno5" src="./public/pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
         </div>
-        <div class="main__div__contenedor-imagen">
-            <img class="main__div__img-imagen-principal" src="./public/dog-91765_1280-corregido.jpg" alt="Imagen principal.jpg">
+        <div class="main__div--letras-encima-video">
+            <div class="main__div__div--letrero1">
+                <img src="./public/24-horas.png" alt="24 horas.jpg"><h2>Urgencias 24 horas</h2></img>
+            </div>
+            <div class="main__div__div--letrero2">
+                <img src="./public/estetoscopio.png" alt="estetoscopio.jpg"><h2>Consulta especializada </h2></img>
+            </div>
+            <div class="main__div__div--letrero3">
+                <img src="./public/herramientas-de-cirugia.png" alt="herramientas-cirugia.jpg"><h2>Cirugias</h2></img>
+            </div>
+            <div class="main__div__div--letrero4">
+                <img src="./public/hospital.png" alt="herramientas-cirugia.jpg"><h2>Hospitalizacion</h2></img>
+
+            </div>
+        </div>
+        <div class="main__span--oscurecido-video"></div>
+        <div class="main__div--video">
+            <video width="100%" autoplay muted loop>
+                <source src="https://res.cloudinary.com/diqp92rza/video/upload/br_1122k/v1651185560/Multimedia/Video-pgVet_vdtvbb.mp4" type="video/mp4">
+                <source src="https://res.cloudinary.com/diqp92rza/video/upload/br_1049k/v1651185560/Multimedia/Video-pgVet-mkv_kd9k3b.mkv" type="video/mkv">
+                <source src="https://res.cloudinary.com/diqp92rza/video/upload/br_1163k/v1651185561/Multimedia/Video-pgVet-webm_uhudt9.webm" type="video/webm">
+                Tu navegador no acepta este formato de video:
+            </video>
         </div>
         <div class="main__div__nuestros-servicios">
             <h2>Nuestros servicios</h2>
