Creacion de galeria de imagenes

--- a/EjerciciosHtmlCss/index.html
+++ b/EjerciciosHtmlCss/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -23,6 +24,7 @@
         </nav>
     </header>
     <main>
+        <!--video con iconos y letras encima-->
         <div>
             <img class="main__div--img-adorno adorno1" src="./public/pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
             <img class="main__div--img-adorno adorno2" src="./public/pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
@@ -32,17 +34,18 @@
         </div>
         <div class="main__div--letras-encima-video">
             <div class="main__div__div--letrero1">
-                <img src="./public/24-horas.png" alt="24 horas.jpg"><h2>Urgencias 24 horas</h2></img>
+                <img src="./public/iconos/24-horas.png" alt="24 horas.jpg"><h2>Urgencias 24 horas</h2></img>
             </div>
             <div class="main__div__div--letrero2">
-                <img src="./public/estetoscopio.png" alt="estetoscopio.jpg"><h2>Consulta especializada </h2></img>
+                <img src="./public/iconos/estetoscopio.png" alt="estetoscopio.jpg">
+                    <h2>Consulta especializada </h2>
+                </img>
             </div>
             <div class="main__div__div--letrero3">
-                <img src="./public/herramientas-de-cirugia.png" alt="herramientas-cirugia.jpg"><h2>Cirugias</h2></img>
+                <img src="./public/iconos/herramientas-de-cirugia.png" alt="herramientas-cirugia.jpg"><h2>Cirugias</h2></img>
             </div>
             <div class="main__div__div--letrero4">
-                <img src="./public/hospital.png" alt="herramientas-cirugia.jpg"><h2>Hospitalizacion</h2></img>
-
+                <img src="./public/iconos/hospital.png" alt="herramientas-cirugia.jpg"><h2>Hospitalizacion</h2></img>
             </div>
         </div>
         <div class="main__span--oscurecido-video"></div>
@@ -76,8 +79,66 @@
             </div>
         </div>
     </main>
+    <section>
+        <div class="valores-corporativos">
+            <div class="valores-corporativos__filtro"></div>
+            <div class="valores-corporativos__side valores-corporativos__side--mision">
+                <img class="valores-corporativos__img valores-corporativos__img--gato" src="./public/kitten-1866475_640.jpg" alt="gato.png"/>
+                <h4 class="valores-corporativos__h4 valores-corporativos__h4--mision">
+                    MISION
+                </h4>
+                <p class="valores-corporativos__p valores-corporativos__p--mision">La clínica veterinaria Gattti está comprometida con la prestación de servicios veterinarios con calidad y seguridad, garantizando la disponibilidad de servicios, competitividad en el mercado; a través de una práctica médica veterinaria profesional y humana, en pro de las mascotas y su familia.
+                </p>
+            </div>
+            <div class="valores-corporativos__side valores-corporativos__side--vision">
+                <img class="valores-corporativos__img valores-corporativos__img--perro" src="./public/puppy-1903313_640.jpg" alt="gato.png"/>
+                <h4 class="valores-corporativos__h4 valores-corporativos__h4--mision">
+                    VISION
+                </h4>
+                <p class="valores-corporativos__p valores-corporativos__p--vision">En el 2023 seremos una clínica comprometida con la seguridad del paciente, reconocida por la prestación de servicios especializados con calidad y el recurso humano competente para su prestación; convirtiéndonos en un referente de la comunidad como principal solución de salud en nuestro segmento de influencia.
+                </p>
+            </div>
+        </div>
+        <!--Grid de imagenes-->
+        <h2 class="titulo-galeria__h2 titulo-galeria__h2--titulo">GALERIA DE IMAGENES</h2>
+        <div class="grid-imagenes__grid grid-imagenes__grid--contenedor">
+            <div class="grid-imagenes__div grid-imagenes__div--camaleon">
+                <img class="grid-imagenes__img grid-imagenes__img--camaleon grid-imagenes__img--izquierdo" src="./public/grid/camaleon-grid.jpg" alt="camaleon.jpg"/>
+            </div>
+            <div class="grid-imagenes__div grid-imagenes__div--delfin">
+                <img class="grid-imagenes__img grid-imagenes__img--delfin" src="./public/grid/delfin-grid.jpg" alt="delfin.jpg"/>
+            </div>
+            <div class="grid-imagenes__div grid-imagenes__div--gatos">
+                <img class="grid-imagenes__img grid-imagenes__img--leon-gatos grid-imagenes__img--derecho" src="./public/grid/gatos-grid.jpg" alt="gatos.jpg"/>
+            </div>
+            <div class="grid-imagenes__div grid-imagenes__div--leon-africano">
+                <img class="grid-imagenes__img grid-imagenes__img--leon-africano grid-imagenes__img--izquierdo" src="./public/grid/leon-africano-grid.jpg" alt="leon-africano.jpg"/>
+            </div>
+            <div class="grid-imagenes__div grid-imagenes__div--leopardo">
+                <img class="grid-imagenes__img grid-imagenes__img--leopardo" src="./public/grid/leopardo-grid.jpg" alt="leopardo.jpg"/>
+            </div>
+            <div class="grid-imagenes__div grid-imagenes__div--lobos">
+                <img class="grid-imagenes__img grid-imagenes__img--lobos grid-imagenes__img--derecho" src="./public/grid/lobos-grid.jpg" alt="lobos.jpg"/>
+            </div>
+            <div class="grid-imagenes__div grid-imagenes__div--loros">
+                <img class="grid-imagenes__img grid-imagenes__img--loros grid-imagenes__img--izquierdo" src="./public/grid/loros-grid.jpg" alt="loros.jpg"/>
+            </div>
+            <div class="grid-imagenes__div grid-imagenes__div--toro">
+                <img class="grid-imagenes__img grid-imagenes__img--toro" src="./public/grid/toro-grid.jpg" alt="toro.jpg"/>
+            </div>
+            <div class="grid-imagenes__div grid-imagenes__div--tortuga-marina">
+                <img class="grid-imagenes__img grid-imagenes__img--tortuga-marina grid-imagenes__img--derecho" src="./public/grid/tortuga-marina-grid.jpg" alt="tortuga-marina.jpg"/>
+            </div>
+        </div>
+    </section>
     <footer>
-
+        <div class="footer">
+            <h6 class="footer__h6 footer__h6--gattti">Gattti</h6>
+            <div class="footer__div">
+                <h6 class="footer__h6 footer__p--derechos">© 2022 Something. All rights reserved.</h6>
+                <h6 class="footer__h6 footer__p--desarrollador">Hecho por Xtevens210</h6>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
