Avances en ubicacion y en icono de whatsapp

--- a/EjerciciosHtmlCss/index.html
+++ b/EjerciciosHtmlCss/index.html
@@ -130,6 +130,18 @@
                 <img class="grid-imagenes__img grid-imagenes__img--tortuga-marina grid-imagenes__img--derecho" src="./public/grid/tortuga-marina-grid.jpg" alt="tortuga-marina.jpg"/>
             </div>
         </div>
+        <div class="ubicacion__div ubicacion__div--contenedor">
+            <h2 class="ubicacion__h2 ubicacion__h2--donde-estamos">DONDE ESTAMOS?</h2>
+            <div class="ubicacion__div2 ubicacion__div2--contenedor">
+                <p class="ubicacion__p ubicacion__p--descripcion"><img class="ubicacion__img--icono ubicacion__img--icono1" src="./public/iconos/ubicacion-morado.png" alt="ubicacion.png"> Estamos ubicados al frente de la unidad deportiva Atanasio girardot</p>
+                <p class="ubicacion__p ubicacion__p--direccion"><img class="ubicacion__img--icono ubicacion__img--icono1" src="./public/iconos/ubicacion-morado.png" alt="ubicacion.png"> Direccion: Cr 45 #32 Diagonal R</p>
+            </div>
+            <img class="ubicacion__img ubicacion__img--imagen" src="./public//imagen-ubicacion.jpg" alt="Ubicacion.jpg">
+            <iframe class="ubicacion__iframe ubicacion__iframe--mapa " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0521253128504!2d-75.59231868563683!3d6.256863995471132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e44290e4f870f69%3A0xf57f97b59ef52c39!2sEstadio%20de%20F%C3%BAtbol%20Atanasio%20Girardot!5e0!3m2!1ses!2sco!4v1654806658682!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="whatsapp__div whatsapp__div--contenedor">
+            <a class="whatsapp__a whatsapp__a--link" href="https://wa.me/573007162596"><img class="whatsapp__img whatsapp__img--logo" src="./whatsapp-logo.png"></a>
+        </div>
     </section>
     <footer>
         <div class="footer">
