--- a/EjerciciosHtmlCss/public/index.html
+++ b/EjerciciosHtmlCss/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veterinaria|Gattti</title>
     <link rel="stylesheet" href="../estilos.css">
-    <link rel="icon" href="./public/huella.png">
+    <link rel="icon" href="./huella.png">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
