Avances en diseño responsive

--- a/EjerciciosHtmlCss/public/index.html
+++ b/EjerciciosHtmlCss/public/index.html
@@ -24,14 +24,7 @@
         </nav>
     </header>
     <main>
-        <!--video con iconos y letras encima-->
-        <div>
-            <img class="main__div--img-adorno adorno1" src="pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
-            <img class="main__div--img-adorno adorno2" src="pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
-            <img class="main__div--img-adorno adorno3" src="pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
-            <img class="main__div--img-adorno adorno4" src="pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
-            <img class="main__div--img-adorno adorno5" src="pildora-de-forma-rectangular-redondeada-del-contorno-de-la-droga.png" alt="pildora-adorno.jpg">
-        </div>
+        <!--Letreros encima del video-->
         <div class="main__div--letras-encima-video">
             <div class="main__div__div--letrero1">
                 <img src="./iconos/24-horas.png" alt="24 horas.jpg"><h2>Urgencias 24 horas</h2></img>
